fix(footer): spacings and line height adjusted #7

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,6 +203,11 @@ body {
   padding-bottom: 4rem;
   color: #fff;
 }
+
+.footernav__item {
+  margin-top: 0.5rem;
+}
+
 .footernav__link,
 .legal-copyright {
   color: #BABEC3;
